feat: text updated on tasks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.application.name=taskmanager
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Synchroniser le modèle de données avec la base de données
+spring.jpa.hibernate.ddl-auto=update
+
 # Configurer la base de données H2 en mémoire
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
